# travis

./: .gitignore  README.md
firmware/read_rc_receiver/: read_rc_receiver.ino
firmware/servo_test/: servo_test.ino
firmware/travis_firmware/: imu.cpp  imu.h  motor.cpp  motor.h  steering.cpp  steering.h  travis_firmware.ino  usb_communication.cpp  usb_communication.h
travis/: CMakeLists.txt  package.xml
travis/launch/: sim_remote_drive.launch
travis_bringup/: CMakeLists.txt  package.xml
travis_bringup/launch/: camera.launch  controller.launch  controller_speed_auto_steer.launch  controller_with_camera.launch  drive_controller_with_camera.launch
travis_control/: CMakeLists.txt  package.xml  setup.py
travis_control/scripts/: drive.py  drive_race.py  race.py
travis_image_processing/: CMakeCache.txt  CMakeLists.txt  package.xml  setup.py
travis_image_processing/launch/: find_homography.launch  lane_detector.launch
travis_image_processing/scripts/: calibrate_camera.py  cross_detection.py  find_homography.py  lane_detection.py  lane_detector.py  sign_detection.py  zebra_detection.py
travis_image_processing/src/cross_detector/: __init__.py  cross_detector.py
travis_image_processing/src/cross_detector/data/: default.travis
travis_image_processing/src/homography/: homography.py
travis_image_processing/src/homography/data/: homography.json  lab.travis  lab2.travis  room.travis
travis_image_processing/src/lane_detector/: CMakeLists.txt  __init__.py  lane.cpp  lane.h  lane_detector.1.py  lane_detector.cpp  lane_detector.h  lane_detector.py
travis_image_processing/src/lane_detector/data/: default.travis  lane.travis
travis_image_processing/src/traffic_sign_detector/: ArucoTaura.py  __init__.py  traffic_sign_detector.py
travis_image_processing/src/zebra_detector/: __init__.py  zebra_detector.py
travis_image_processing/src/zebra_detector/data/: default.travis  zebra.travis
travis_msg/: CMakeLists.txt  package.xml
travis_msg/msg/: LaneInfo.msg  SignInfo.msg  SignsDetected.msg
travis_serial_communication/: CMakeLists.txt  package.xml  setup.py
travis_serial_communication/scripts/: serial_comm.py  serial_communication.py
travis_serial_communication/src/serial_communication/: __init__.py  serial_communication.py
travis_serial_communication/test/: serial_comm.py
travis_usb_controller/: CMakeLists.txt  package.xml
travis_usb_controller/scripts/: xbox_controller.py
travis_utils/: calib.py  lane_test.py
