<?xml version="1.0"?>

<package>
  <name>travis</name>
  <version>0.0.0</version>
  <description>Travis metapackage</description>

  <maintainer email="daninesvera@gmail.com">nesvera</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>travis_image_processing</run_depend>
  <run_depend>travis_serial_comm</run_depend>


  <export>
    <metapackage />

  </export>
</package>
